--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
 Flask==3.1.0
+gunicorn==22.0.0
 fonttools==4.55.6
 itsdangerous==2.2.0
 Jinja2==3.1.5
